[package]
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
name    = "greeter"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "2.0.0"
uuid     = { version = "0.8.2", features = ["v4"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug     = false
lto       = true
opt-level = "z"
panic     = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
